service-auth/overlays/stage/debezium_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-auth-debezium-deployment
spec:
  template:
    spec:
      containers:
      - name: debezium-connector
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "! curl http://$(hostname):8083/connectors/stage-service-auth/status 2>/dev/null | grep -q \"state\":\"FAILED\""]
