service-auth/overlays/stage/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-auth-virtualservice
spec:
  hosts:
  - "192.168.0.36"
